# small-viewer-rs

./: Cargo.toml  config.conf
src/: config_reader.rs  daemon.rs  lib.rs  main.rs
src/logfile_server/: mod.rs  static_handler.rs
viewer/scripts/: app.js
viewer/styles/: main.css
