[package]

name = "small-viewer"
description = "a small-logger logs viewer"
version = "0.0.2"
license-file = "LICENSE"
repository = "https://github.com/octplane/small-viewer-rs"
authors = ["Pierre Baillet <pierre@baillet.name>"]

[dependencies]
rustc-serialize = "*"
time = "*"

iron = "*"
router = "*"
staticfile = "0.2.0"
iron-login = "*"
mount = "*"

getopts = "*"
frank_jwt = "*"
urlencoded = "*"
nom = "*"

